fix(attendee reg): Remove float on submit button.
Fix styling around AR submit button - remove class that adds float so that other blocks don't
overlap/collapse around it.

ticket: #123044

--- a/src/resources/postcss/tickets-registration-page.pcss
+++ b/src/resources/postcss/tickets-registration-page.pcss
@@ -336,13 +336,11 @@ body.page-tribe-attendee-registration {
  * Attendee Registration Checkout Form
  */
  .tribe-block__tickets__registration__checkout {
-	 float: right;
 	 margin-bottom: 30px;
-	 width: 100%;
+	 text-align: right;
  }
 
 .tribe-block__tickets__registration__checkout__submit {
-
 	&:disabled {
 		background-color: #eeeff1;
 		color: #8b959f;
